syntax = "proto3";
option java_package = "com.signify.hue.flutterreactiveble";
option java_outer_classname = "ProtobufModel";

message ScanForDevicesRequest {
    repeated Uuid serviceUuids = 1;
    int32 scanMode = 2;
    bool requireLocationServicesEnabled = 3;
}

message DeviceScanInfo {
    string id = 1;
    string name = 2;
    GenericFailure failure = 3;
    repeated ServiceDataEntry serviceData = 4;
    repeated Uuid serviceUuids = 7;
    bytes manufacturerData = 6;
    int32 rssi = 5;
}

message ConnectToDeviceRequest {
    string deviceId = 1;
    ServicesWithCharacteristics servicesWithCharacteristicsToDiscover = 2;
    int32 timeoutInMs = 3;
}

message DeviceInfo {
    string id = 1;
    int32 connectionState = 2;
    GenericFailure failure = 3;
}

message DisconnectFromDeviceRequest {
    string deviceId = 1;
}

message ClearGattCacheRequest {
    string deviceId = 1;
}

message ClearGattCacheInfo {
    GenericFailure failure = 1;
}

message NotifyCharacteristicRequest {
    CharacteristicAddress characteristic = 1;
}

message NotifyNoMoreCharacteristicRequest {
    CharacteristicAddress characteristic = 1;
}

message ReadCharacteristicRequest {
    CharacteristicAddress characteristic = 1;
}

message CharacteristicValueInfo {
    CharacteristicAddress characteristic = 1;
    bytes value = 2;
    GenericFailure failure = 3;
}

message WriteCharacteristicRequest {
    CharacteristicAddress characteristic = 1;
    bytes value = 2;
}

message WriteCharacteristicInfo {
    CharacteristicAddress characteristic = 1;
    GenericFailure failure = 3;
}

message NegotiateMtuRequest {
    string deviceId = 1;
    int32 mtuSize = 2;
}

message NegotiateMtuInfo {
    string deviceId = 1;
    int32 mtuSize = 2;
    GenericFailure failure = 3;
}

message BleStatusInfo {
    int32 status = 1;
}

message ChangeConnectionPriorityRequest {
    string deviceId = 1;
    int32 priority = 2;
}

message ChangeConnectionPriorityInfo {
    string deviceId = 1;
    GenericFailure failure = 2;
}

message CharacteristicAddress {
    string deviceId = 1;
    Uuid serviceUuid = 2;
    Uuid characteristicUuid = 3;
}

message ServiceDataEntry {
    Uuid serviceUuid = 1;
    bytes data = 2;
}

message ServicesWithCharacteristics {
    repeated ServiceWithCharacteristics items = 1;
}

message ServiceWithCharacteristics {
    Uuid serviceId = 1;
    repeated Uuid characteristics = 2;
}

message DiscoverServicesRequest {
    string deviceId = 1;
}

message DiscoverServicesInfo {
    string deviceId = 1;
    repeated DiscoveredService services = 2;
}

message DiscoveredService {
    Uuid serviceUuid = 1;
    repeated Uuid characteristicUuids = 2;
    repeated DiscoveredService includedServices = 3;
}

message Uuid {
    bytes data = 1;
}

message GenericFailure {
    int32 code = 1;
    string message = 2;
}
